# Bell-Pharmacy-Operations-RynxSystems-

./: package-lock.json  package.json
app/: layout.tsx  page.tsx
app/modules/browser-manager/: page.tsx
app/modules/browser-manager/components/: BrowserConsole.tsx  BrowserControls.tsx  BrowserSession.tsx  BrowserStatus.tsx
app/modules/browser-manager/hooks/: useBrowser.ts
app/modules/browser-manager/services/: browser.service.ts
app/modules/browser-manager/store/: browser.store.ts
app/modules/nomination-checker/: page.tsx
components/dashboard/: LogsCard.tsx  ProgressCard.tsx  StatCard.tsx
components/health/: HealthStatus.tsx
components/layout/: AppShell.tsx  Header.tsx  Navigation.tsx  Sidebar.tsx  UserMenu.tsx
components/navigation/: BackToDashboard.tsx
hooks/: useAutomationState.ts
lib/: nomination.service.ts  state.service.ts
providers/: AppProvider.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/browser/: commands.rs  manager.rs  mod.rs  state.rs
src-tauri/src/commands/: browser.rs  mod.rs  nomination.rs  state.rs
