[package]
name = "app"
version = "0.1.0"
description = "Bell Pharmacy Operations"
authors = ["Aslam"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4"

tokio = { version = "1", features = ["full"] }

once_cell = "1.21"

anyhow = "1.0"

playwright = "0.0.20"
